--- a/components/src/patterns/header/_navbar-menu-item.scss
+++ b/components/src/patterns/header/_navbar-menu-item.scss
@@ -9,6 +9,11 @@
 }
 
 .#{$prefix}-navbar-menu-item-link {
+  width: 100%;
+  padding: 4px 24px 0 24px;
+}
+
+.#{$prefix}-navbar-menu-item-link {
   .#{$prefix}-navbar-icon-button {
     width: var(--sdds-nav-item-icon-size);
     height: var(--sdds-nav-item-icon-size);
@@ -28,7 +33,7 @@
   }
 
   > .#{$prefix}-navbar-menu-item-link {
-    padding: 24px;
+    padding: 4px 24px 0 24px;
     justify-content: space-between;
 
     .sdds-icon-arrow {
@@ -49,7 +54,6 @@
     @include type-style('detail-02');
     font-weight: normal;
     margin: 0;
-    padding: 16px 10px 16px 24px;
     color: var(--#{$prefix}-nav-item-dropdown-item-colour);
     border: 0;
     list-style: none;
@@ -64,7 +68,19 @@
       @include type-style('headline-07');
       color: var(--#{$prefix}-nav-item-dropdown-colour-active);
       border-left: 4px solid var(--#{$prefix}-nav-item-border-active);
-      padding-left: 20px;
+    }
+  }
+
+  .#{$prefix}-navbar-menu__dropdown-item {
+    a,
+    .#{$prefix}-navbar-menu__dropdown-item-link {
+      padding: 16px 10px 16px 24px;
+    }
+    &.active {
+      a,
+      .#{$prefix}-navbar-menu__dropdown-item-link {
+        padding-left: 20px;
+      }
     }
   }
 
@@ -97,11 +113,6 @@
 
       padding: 0;
       position: relative;
-      border-right: 0;
-
-      &:hover {
-        border-color: transparent;
-      }
 
       > .#{$prefix}-navbar-menu-item-link {
         .#{$prefix}-icon-arrow {
@@ -115,8 +126,8 @@
         position: absolute;
         min-width: var(--#{$prefix}-nav-item-dropdown-minwidth);
         background: #fff;
-        box-shadow: 0px 3px 3px rgb(0 0 0 / 15%), 0px 2px 1px rgb(0 0 0 / 10%);
-        border-radius: 0px 0px 4px 4px;
+        box-shadow: 0 3px 3px rgb(0 0 0 / 15%), 0 2px 1px rgb(0 0 0 / 10%);
+        border-radius: 0 0 4px 4px;
         z-index: 2000;
         top: var(--#{$prefix}-header-height);
         left: 0;
