--- a/components/src/patterns/header/_navbar-toolbar-menu.scss
+++ b/components/src/patterns/header/_navbar-toolbar-menu.scss
@@ -14,8 +14,6 @@
 
   .#{$prefix}-navbar-menu-item-dropdown,
   .#{$prefix}-navbar-menu-item {
-    border-left: 1px solid var(--#{$prefix}-header-divider);
-
     &:hover,
     &.hover {
       background-color: var(--#{$prefix}-nav-item-background-hover);
@@ -28,14 +26,12 @@
 
       .#{$prefix}-navbar-menu__dropdown-item {
         border-bottom: 1px solid var(--#{$prefix}-nav-item-dropdown-divider);
-        padding: 24px 16px;
       }
 
       .#{$prefix}-navbar-menu-item-description {
         @include type-style('headline-07');
         color: var(--#{$prefix}-dropdown-menu-items-title);
-        padding-top: 16px;
-        padding-bottom: 16px;
+        padding: 16px;
         &:hover {
           background: var(--#{$prefix}-nav-item-dropdown-item-background);
         }
@@ -74,6 +70,24 @@
   .#{$prefix}-navbar-menu-item-dropdown,
   .#{$prefix}-navbar-menu-item {
     border-bottom: 0;
+  }
+  .#{$prefix}-navbar-menu-item-link {
+    padding: 2px 24px 0 24px;
+  }
+}
+
+.#{$prefix}-navbar-menu-toolbar {
+  .#{$prefix}-navbar-menu__dropdown-item {
+    a,
+    .#{$prefix}-navbar-menu__dropdown-item-link {
+      padding: 24px 16px;
+    }
+    &.active {
+      a,
+      .#{$prefix}-navbar-menu__dropdown-item-link {
+        padding: 24px 16px;
+      }
+    }
   }
 }
 
@@ -117,8 +131,6 @@
 
     .#{$prefix}-navbar-menu-item-dropdown,
     .#{$prefix}-navbar-menu-item {
-      border-left: 1px solid var(--#{$prefix}-header-divider);
-
       .#{$prefix}-navbar-menu__dropdown-menu {
         width: auto;
         min-width: var(--#{$prefix}-nav-item-toolbar-menu-minwidth);
